--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "vue": "^2.5.17"
-  },
-  "devDependencies": {
+    "vue": "^2.5.17",
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-service": "^3.0.4",
     "express": "^4.16.4",
@@ -19,6 +17,8 @@
     "less-loader": "^4.1.0",
     "serve-static": "^1.13.2",
     "vue-template-compiler": "^2.5.17"
+  },
+  "devDependencies": {
   },
   "postcss": {
     "plugins": {
